--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
       </div>
     </header>
-
+    <!-- 
     <main>
       <section class="hero hero__img">
         <div class="container">
@@ -526,9 +526,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container__centered">
         <div>
           <a href="./index.html" class="logo"
@@ -607,9 +607,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__btn" data-modal-close>
           <svg class="modal__icon" width="18px" height="18px">
@@ -697,6 +697,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
