--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </button>
       </div>
     </header>
-    <!-- 
+
     <main>
       <section class="hero hero__img">
         <div class="container">
@@ -77,7 +77,7 @@
         </div>
       </section>
 
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="container">
           <h2 class="advantages__title advantages__title--visually-hidden">
             Наши преимущество
@@ -137,9 +137,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="our-work">
+      <!-- <section class="our-work">
         <div class="container">
           <h2 class="our-work__title">Чем мы занимаемся</h2>
           <ul class="list-work">
@@ -184,9 +184,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="our-team">
+      <!-- <section class="our-team">
         <div class="container">
           <h2 class="our-team__title">Наша команда</h2>
           <ul class="team-list">
@@ -463,9 +463,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="our-clients">
+      <!-- <section class="our-clients">
         <div class="container">
           <h2 class="our-clients__title">Постоянные клиенты</h2>
 
@@ -531,8 +531,8 @@
             </li>
           </ul>
         </div>
-      </section>
-    </main> -->
+      </section> -->
+    </main>
 
     <!-- <footer class="footer">
       <div class="container footer-container__centered">
