added advantages section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </section>
 
-      <!-- <section class="advantages">
+      <section class="advantages">
         <div class="container">
           <h2 class="advantages__title advantages__title--visually-hidden">
             Наши преимущество
@@ -137,7 +137,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="our-work">
         <div class="container">
