--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </section>
 
-      <!-- <section class="our-work">
+      <section class="our-work">
         <div class="container">
           <h2 class="our-work__title">Чем мы занимаемся</h2>
           <ul class="list-work">
@@ -184,7 +184,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="our-team">
         <div class="container">
