--- a/index.html
+++ b/index.html
@@ -186,17 +186,20 @@
         </div>
       </section>
 
-      <!-- <section class="our-team">
+      <section class="our-team">
         <div class="container">
           <h2 class="our-team__title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list__card">
-              <img
-                src="./images/team/team_card1.jpg"
-                alt="Фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <div class="team-list__thumb">
+                <img
+                  class="team-list__img"
+                  src="./images/team/team_card1.jpg"
+                  alt="Фото сотрудника"
+                  width="270"
+                  height="260"
+                />
+              </div>
               <div class="team-list__name">
                 <h3 class="team-list__title">Игорь Демьяненко</h3>
                 <p class="team-list__subtitle">Product Designer</p>
@@ -259,12 +262,15 @@
             </li>
 
             <li class="team-list__card">
-              <img
-                src="./images/team/team_card2.jpg"
-                alt="Фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <div class="team-list__thumb">
+                <img
+                  class="team-list__img"
+                  src="./images/team/team_card2.jpg"
+                  alt="Фото сотрудника"
+                  width="270"
+                  height="260"
+                />
+              </div>
               <div class="team-list__name">
                 <h3 class="team-list__title">Ольга Репина</h3>
                 <p class="team-list__subtitle">Frontend Developer</p>
@@ -327,12 +333,15 @@
             </li>
 
             <li class="team-list__card">
-              <img
-                src="./images/team/team_card3.jpg"
-                alt="Фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <div class="team-list__thumb">
+                <img
+                  class="team-list__img"
+                  src="./images/team/team_card3.jpg"
+                  alt="Фото сотрудника"
+                  width="270"
+                  height="260"
+                />
+              </div>
               <div class="team-list__name">
                 <h3 class="team-list__title">Николай Тарасов</h3>
                 <p class="team-list__subtitle">Marketing</p>
@@ -395,12 +404,15 @@
             </li>
 
             <li class="team-list__card">
-              <img
-                src="./images/team/team_card4.jpg"
-                alt="Фото сотрудника"
-                width="270"
-                height="260"
-              />
+              <div class="team-list__thumb">
+                <img
+                  class="team-list__img"
+                  src="./images/team/team_card4.jpg"
+                  alt="Фото сотрудника"
+                  width="270"
+                  height="260"
+                />
+              </div>
               <div class="team-list__name">
                 <h3 class="team-list__title">Михаил Ермаков</h3>
                 <p class="team-list__subtitle">UI Designer</p>
@@ -463,7 +475,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="our-clients">
         <div class="container">
