--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
               <div class="team-list__thumb">
                 <img
                   class="team-list__img"
+                  srcset="
+                    ../images/team/team_card1.jpg    1x,
+                    ../images/team/team_card1@2x.jpg 2x
+                  "
                   src="./images/team/team_card1.jpg"
                   alt="Фото сотрудника"
                   width="270"
@@ -265,6 +269,10 @@
               <div class="team-list__thumb">
                 <img
                   class="team-list__img"
+                  srcset="
+                    ../images/team/team_card2.jpg    1x,
+                    ../images/team/team_card2@2x.jpg 2x
+                  "
                   src="./images/team/team_card2.jpg"
                   alt="Фото сотрудника"
                   width="270"
@@ -336,6 +344,10 @@
               <div class="team-list__thumb">
                 <img
                   class="team-list__img"
+                  srcset="
+                    ../images/team/team_card3.jpg    1x,
+                    ../images/team/team_card3@2x.jpg 2x
+                  "
                   src="./images/team/team_card3.jpg"
                   alt="Фото сотрудника"
                   width="270"
@@ -407,6 +419,10 @@
               <div class="team-list__thumb">
                 <img
                   class="team-list__img"
+                  srcset="
+                    ../images/team/team_card4.jpg    1x,
+                    ../images/team/team_card4@2x.jpg 2x
+                  "
                   src="./images/team/team_card4.jpg"
                   alt="Фото сотрудника"
                   width="270"
