--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         </div>
       </section>
 
-      <!-- <section class="our-clients">
+      <section class="our-clients">
         <div class="container">
           <h2 class="our-clients__title">Постоянные клиенты</h2>
 
@@ -559,7 +559,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
