--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container__centered">
         <div>
           <a href="./index.html" class="logo"
@@ -641,7 +641,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
