--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </header>
 
-    <main>
+    <!-- <main>
       <section class="hero hero__img">
         <div class="container">
           <h1 class="hero__title">
@@ -560,9 +560,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container__centered">
         <div>
           <a href="./index.html" class="logo"
@@ -641,7 +641,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
