--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="container header__container">
         <nav class="nav-menu">
-          <a href="./index.html" class="logo header__logo--padding"
+          <a href="./index.html" class="logo"
             ><span class="logo__blue">Web</span
             ><span class="logo__black">Studio</span></a
           >
