--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </header>
 
-    <!-- <main>
+    <main>
       <section class="hero hero__img">
         <div class="container">
           <h1 class="hero__title">
@@ -560,7 +560,7 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
     <!-- <footer class="footer">
       <div class="container footer-container__centered">
