--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
             <li class="list-work__item">
               <div class="list-work__thumb">
                 <img
-                  src="./images/box1.jpg"
+                  srcset="
+                    ../images/box/box1.jpg    1x,
+                    ../images/box/box1@2x.jpg 2x
+                  "
+                  src="./images/box/box1.jpg"
                   alt="Клавиатура"
                   width="370"
                   height="294"
@@ -159,7 +163,11 @@
             <li class="list-work__item">
               <div class="list-work__thumb">
                 <img
-                  src="./images/box2.jpg"
+                  srcset="
+                    ../images/box/box2.jpg    1x,
+                    ../images/box/box2@2x.jpg 2x
+                  "
+                  src="./images/box/box2.jpg"
                   alt="Телефон"
                   width="370"
                   height="294"
@@ -172,7 +180,11 @@
             <li class="list-work__item">
               <div class="list-work__thumb">
                 <img
-                  src="./images/box3.jpg"
+                  srcset="
+                    ../images/box/box3.jpg    1x,
+                    ../images/box/box3@2x.jpg 2x
+                  "
+                  src="./images/box/box3.jpg"
                   alt="Графическией планшет"
                   width="370"
                   height="294"
