--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 
     <footer class="footer">
       <div class="container footer-container__centered">
-        <div>
+        <div class="footer-address">
           <a href="./index.html" class="logo"
             ><span class="logo__blue">Web</span
             ><span class="logo__black logo__black--white">Studio</span></a
