added html pages for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,12 @@
             </a>
           </li>
         </ul>
+
+        <button class="header-button" type="button">
+          <svg width="24px" height="16px">
+            <use href="./images/symbol-defs.svg#menu-header"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -324,7 +330,7 @@
 
     <footer class="footer">
       <div class="container footer-container__centered">
-        <div>
+        <div class="footer-address">
           <a href="./index.html" class="logo"
             ><span class="logo__blue">Web</span
             ><span class="logo__black logo__black--white">Studio</span></a
