--- a/portfolio.html
+++ b/portfolio.html
@@ -95,12 +95,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img0.jpg"
-                      alt="ноутбук"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img0.jpg"
+                        alt="ноутбук"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -120,12 +122,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img1.jpg"
-                      alt="два спортсмена играют в баскетбол"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img1.jpg"
+                        alt="два спортсмена играют в баскетбол"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -147,12 +151,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img2.jpg"
-                      alt="лого ресторана"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img2.jpg"
+                        alt="лого ресторана"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -172,12 +178,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img3.jpg"
-                      alt="наушники"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img3.jpg"
+                        alt="наушники"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -197,12 +205,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img4.jpg"
-                      alt="две коробки"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img4.jpg"
+                        alt="две коробки"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -222,12 +232,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img5.jpg"
-                      alt="монитор"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img5.jpg"
+                        alt="монитор"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -249,12 +261,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img6.jpg"
-                      alt="журнал"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img6.jpg"
+                        alt="журнал"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -276,12 +290,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img7.jpg"
-                      alt="тикет"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img7.jpg"
+                        alt="тикет"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
@@ -301,12 +317,14 @@
               <li class="cards__item">
                 <a class="cards__link" href="#">
                   <div class="cards-content">
-                    <img
-                      src="./images/apps_img/img8.jpg"
-                      alt="работа с ноутбуком"
-                      width="370"
-                      height="294"
-                    />
+                    <div class="cards-thumb">
+                      <img
+                        src="./images/apps_img/img8.jpg"
+                        alt="работа с ноутбуком"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
                     <div class="cards-content__backdrop">
                       <p class="cards-content__text">
                         Технокряк это современная площадка распространения
