--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img0.jpg"
                         alt="ноутбук"
                         width="370"
@@ -124,6 +125,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img1.jpg"
                         alt="два спортсмена играют в баскетбол"
                         width="370"
@@ -153,6 +155,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img2.jpg"
                         alt="лого ресторана"
                         width="370"
@@ -180,6 +183,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img3.jpg"
                         alt="наушники"
                         width="370"
@@ -207,6 +211,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img4.jpg"
                         alt="две коробки"
                         width="370"
@@ -234,6 +239,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img5.jpg"
                         alt="монитор"
                         width="370"
@@ -263,6 +269,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img6.jpg"
                         alt="журнал"
                         width="370"
@@ -292,6 +299,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img7.jpg"
                         alt="тикет"
                         width="370"
@@ -319,6 +327,7 @@
                   <div class="cards-content">
                     <div class="cards-thumb">
                       <img
+                        class="cards-thumb__img"
                         src="./images/apps_img/img8.jpg"
                         alt="работа с ноутбуком"
                         width="370"
