--- a/portfolio.html
+++ b/portfolio.html
@@ -98,6 +98,10 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
+                        srcset="
+                          ./images/apps_img/img0.jpg    1x,
+                          ./images/apps_img/img0@2x.jpg 2x
+                        "
                         src="./images/apps_img/img0.jpg"
                         alt="ноутбук"
                         width="370"
@@ -126,6 +130,10 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
+                        srcset="
+                          ./images/apps_img/img1.jpg    1x,
+                          ./images/apps_img/img1@2x.jpg 2x
+                        "
                         src="./images/apps_img/img1.jpg"
                         alt="два спортсмена играют в баскетбол"
                         width="370"
@@ -156,6 +164,10 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
+                        srcset="
+                          ./images/apps_img/img2.jpg    1x,
+                          ./images/apps_img/img2@2x.jpg 2x
+                        "
                         src="./images/apps_img/img2.jpg"
                         alt="лого ресторана"
                         width="370"
@@ -184,6 +196,10 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
+                        srcset="
+                          ./images/apps_img/img3.jpg    1x,
+                          ./images/apps_img/img3@2x.jpg 2x
+                        "
                         src="./images/apps_img/img3.jpg"
                         alt="наушники"
                         width="370"
@@ -212,7 +228,11 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
-                        src="./images/apps_img/img4.jpg"
+                        srcset="
+                          ../images/apps_img/img4.jpg    1x,
+                          ../images/apps_img/img4@2x.jpg 2x
+                        "
+                        src="../images/apps_img/img4.jpg"
                         alt="две коробки"
                         width="370"
                         height="294"
@@ -240,7 +260,11 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
-                        src="./images/apps_img/img5.jpg"
+                        srcset="
+                          ../images/apps_img/img5.jpg    1x,
+                          ../images/apps_img/img5@2x.jpg 2x
+                        "
+                        src="../images/apps_img/img5.jpg"
                         alt="монитор"
                         width="370"
                         height="294"
@@ -270,7 +294,11 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
-                        src="./images/apps_img/img6.jpg"
+                        srcset="
+                          ../images/apps_img/img6.jpg    1x,
+                          ../images/apps_img/img6@2x.jpg 2x
+                        "
+                        src="../images/apps_img/img6.jpg"
                         alt="журнал"
                         width="370"
                         height="294"
@@ -300,7 +328,11 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
-                        src="./images/apps_img/img7.jpg"
+                        srcset="
+                          ../images/apps_img/img7.jpg    1x,
+                          ../images/apps_img/img7@2x.jpg 2x
+                        "
+                        src="../images/apps_img/img7.jpg"
                         alt="тикет"
                         width="370"
                         height="294"
@@ -328,7 +360,11 @@
                     <div class="cards-thumb">
                       <img
                         class="cards-thumb__img"
-                        src="./images/apps_img/img8.jpg"
+                        srcset="
+                          ../images/apps_img/img8.jpg    1x,
+                          ../images/apps_img/img8@2x.jpg 2x
+                        "
+                        src="../images/apps_img/img8.jpg"
                         alt="работа с ноутбуком"
                         width="370"
                         height="294"
