added mobile menu

--- a/index.html
+++ b/index.html
@@ -743,6 +743,13 @@
         </form>
       </div>
     </div>
+    <div class="mobile-menu">
+      <!-- <button type="button" class="modal__btn" data-modal-close>
+        <svg class="modal__icon" width="18.67px" height="18.67px">
+          <use href="./images/symbol-defs.svg#icon-close-black"></use>
+        </svg>
+      </button> -->
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
