--- a/index.html
+++ b/index.html
@@ -749,6 +749,44 @@
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
       </button> -->
+      <nav class="nav-mobile-menu">
+        <ul class="mobile-nav">
+          <li class="mobile-nav__item">
+            <a
+              class="mobile-nav__link mobile-nav__link--current"
+              href="./index.html"
+              >Студия</a
+            >
+          </li>
+          <li class="mobile-nav__item">
+            <a class="mobile-nav__link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a class="mobile-nav__link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="mobile-contact-link">
+        <li class="mobile-contact-link__item">
+          <a class="mobile-contact-link__link" href="tel:+380961111111">
+            +38 096 111 11 11
+          </a>
+        </li>
+
+        <li class="mobile-contact-link__item">
+          <a class="mobile-contact-link__link" href="mailto:info@devstudio.com">
+            info@devstudio.com
+          </a>
+        </li>
+      </ul>
+
+      <ul class="mobile-social-network">
+        <li>Instagram</li>
+        <li>Twitter</li>
+        <li>Facebook</li>
+        <li>LinkedIn</li>
+      </ul>
     </div>
     <script src="./js/modal.js"></script>
   </body>
