added font-style for mobile menu

--- a/index.html
+++ b/index.html
@@ -752,11 +752,7 @@
       <nav class="nav-mobile-menu">
         <ul class="mobile-nav">
           <li class="mobile-nav__item">
-            <a
-              class="mobile-nav__link mobile-nav__link--current"
-              href="./index.html"
-              >Студия</a
-            >
+            <a class="mobile-nav__link" href="./index.html">Студия</a>
           </li>
           <li class="mobile-nav__item">
             <a class="mobile-nav__link" href="./portfolio.html">Портфолио</a>
@@ -775,7 +771,10 @@
         </li>
 
         <li class="mobile-contact-link__item">
-          <a class="mobile-contact-link__link" href="mailto:info@devstudio.com">
+          <a
+            class="mobile-contact-link__link mobile-contact-link__link--color"
+            href="mailto:info@devstudio.com"
+          >
             info@devstudio.com
           </a>
         </li>
