--- a/index.html
+++ b/index.html
@@ -781,10 +781,10 @@
       </ul>
 
       <ul class="mobile-social-network">
-        <li>Instagram</li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-        <li>LinkedIn</li>
+        <li class="mobile-social-network__item">Instagram</li>
+        <li class="mobile-social-network__item">Twitter</li>
+        <li class="mobile-social-network__item">Facebook</li>
+        <li class="mobile-social-network__item">LinkedIn</li>
       </ul>
     </div>
     <script src="./js/modal.js"></script>
