--- a/index.html
+++ b/index.html
@@ -781,10 +781,10 @@
       </ul>
 
       <ul class="mobile-social-network">
-        <li class="mobile-social-network__item">Instagram</li>
-        <li class="mobile-social-network__item">Twitter</li>
-        <li class="mobile-social-network__item">Facebook</li>
-        <li class="mobile-social-network__item">LinkedIn</li>
+        <li class="mobile-social-network__item"><a href="#">Instagram</a></li>
+        <li class="mobile-social-network__item"><a href="#">Twitter</a></li>
+        <li class="mobile-social-network__item"><a href="#">Facebook</a></li>
+        <li class="mobile-social-network__item"><a href="#">LinkedIn</a></li>
       </ul>
     </div>
     <script src="./js/modal.js"></script>
