added mobile menu html

--- a/index.html
+++ b/index.html
@@ -781,10 +781,18 @@
       </ul>
 
       <ul class="mobile-social-network">
-        <li class="mobile-social-network__item"><a href="#">Instagram</a></li>
-        <li class="mobile-social-network__item"><a href="#">Twitter</a></li>
-        <li class="mobile-social-network__item"><a href="#">Facebook</a></li>
-        <li class="mobile-social-network__item"><a href="#">LinkedIn</a></li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">Instagram</a>
+        </li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">Twitter</a>
+        </li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">Facebook</a>
+        </li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">LinkedIn</a>
+        </li>
       </ul>
     </div>
     <script src="./js/modal.js"></script>
