--- a/index.html
+++ b/index.html
@@ -744,11 +744,15 @@
       </div>
     </div>
     <div class="mobile-menu">
-      <!-- <button type="button" class="modal__btn" data-modal-close>
+      <button
+        type="button"
+        class="modal__btn modal__btn--mobile"
+        data-modal-close
+      >
         <svg class="modal__icon" width="18.67px" height="18.67px">
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
-      </button> -->
+      </button>
       <nav class="nav-mobile-menu">
         <ul class="mobile-nav">
           <li class="mobile-nav__item">
