added mobile js

--- a/index.html
+++ b/index.html
@@ -743,12 +743,8 @@
         </form>
       </div>
     </div>
-    <div class="mobile-menu">
-      <button
-        type="button"
-        class="modal__btn modal__btn--mobile"
-        data-modal-close
-      >
+    <div class="mobile-menu is-hidden">
+      <button type="button" class="modal__btn modal__btn--mobile">
         <svg class="modal__icon" width="18.67px" height="18.67px">
           <use href="./images/symbol-defs.svg#icon-close-black"></use>
         </svg>
@@ -799,6 +795,7 @@
         </li>
       </ul>
     </div>
+    <script src="./js/mobilemenu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
