--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,12 @@
           </li>
         </ul>
 
-        <button class="header-button" type="button">
+        <button
+          type="button"
+          class="header-button js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
           <svg width="24px" height="16px">
             <use href="./images/symbol-defs.svg#menu-header"></use>
           </svg>
@@ -471,5 +476,58 @@
         </div>
       </div>
     </footer>
+    <div class="mobile-menu js-menu-container" id="mobile-menu">
+      <button type="button" class="modal__btn modal__btn--mobile js-close-menu">
+        <svg class="modal__icon" width="18.67px" height="18.67px">
+          <use href="./images/symbol-defs.svg#icon-close-black"></use>
+        </svg>
+      </button>
+      <nav class="nav-mobile-menu">
+        <ul class="mobile-nav">
+          <li class="mobile-nav__item">
+            <a class="mobile-nav__link" href="./index.html">Студия</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a class="mobile-nav__link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a class="mobile-nav__link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="mobile-contact-link">
+        <li class="mobile-contact-link__item">
+          <a class="mobile-contact-link__link" href="tel:+380961111111">
+            +38 096 111 11 11
+          </a>
+        </li>
+
+        <li class="mobile-contact-link__item">
+          <a
+            class="mobile-contact-link__link mobile-contact-link__link--color"
+            href="mailto:info@devstudio.com"
+          >
+            info@devstudio.com
+          </a>
+        </li>
+      </ul>
+
+      <ul class="mobile-social-network">
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">Instagram</a>
+        </li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">Twitter</a>
+        </li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">Facebook</a>
+        </li>
+        <li class="mobile-social-network__item">
+          <a class="mobile-social-network__link" href="#">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+    <script src="./js/mobilemenu.js"></script>
   </body>
 </html>
