added current for mobile nav

--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
         </form>
       </div>
     </div>
+
     <div class="mobile-menu js-menu-container" id="mobile-menu">
       <button type="button" class="modal__btn modal__btn--mobile js-close-menu">
         <svg class="modal__icon" width="18.67px" height="18.67px">
@@ -757,7 +758,11 @@
       <nav class="nav-mobile-menu">
         <ul class="mobile-nav">
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="./index.html">Студия</a>
+            <a
+              class="mobile-nav__link mobile-nav__link--current"
+              href="./index.html"
+              >Студия</a
+            >
           </li>
           <li class="mobile-nav__item">
             <a class="mobile-nav__link" href="./portfolio.html">Портфолио</a>
