added current for btn

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,12 @@
           <h1 class="visually-hidden">Примеры работ</h1>
           <ul class="buttons-menu">
             <li class="buttons-menu__item">
-              <button class="buttons-menu__btn" type="button">Все</button>
+              <button
+                class="buttons-menu__btn buttons-menu__btn--current"
+                type="button"
+              >
+                Все
+              </button>
             </li>
             <li class="buttons-menu__item">
               <button class="buttons-menu__btn" type="button">Веб-сайты</button>
