--- a/index.html
+++ b/index.html
@@ -151,10 +151,7 @@
             <li class="list-work__item">
               <div class="list-work__thumb">
                 <img
-                  srcset="
-                    ../images/box/box1.jpg    1x,
-                    ../images/box/box1@2x.jpg 2x
-                  "
+                  srcset="./images/box/box1.jpg 1x, ./images/box/box1@2x.jpg 2x"
                   src="./images/box/box1.jpg"
                   alt="Клавиатура"
                   width="370"
@@ -168,10 +165,7 @@
             <li class="list-work__item">
               <div class="list-work__thumb">
                 <img
-                  srcset="
-                    ../images/box/box2.jpg    1x,
-                    ../images/box/box2@2x.jpg 2x
-                  "
+                  srcset="./images/box/box2.jpg 1x, ./images/box/box2@2x.jpg 2x"
                   src="./images/box/box2.jpg"
                   alt="Телефон"
                   width="370"
@@ -185,10 +179,7 @@
             <li class="list-work__item">
               <div class="list-work__thumb">
                 <img
-                  srcset="
-                    ../images/box/box3.jpg    1x,
-                    ../images/box/box3@2x.jpg 2x
-                  "
+                  srcset="./images/box/box3.jpg 1x, ./images/box/box3@2x.jpg 2x"
                   src="./images/box/box3.jpg"
                   alt="Графическией планшет"
                   width="370"
@@ -212,8 +203,8 @@
                 <img
                   class="team-list__img"
                   srcset="
-                    ../images/team/team_card1.jpg    1x,
-                    ../images/team/team_card1@2x.jpg 2x
+                    ./images/team/team_card1.jpg    1x,
+                    ./images/team/team_card1@2x.jpg 2x
                   "
                   src="./images/team/team_card1.jpg"
                   alt="Фото сотрудника"
@@ -287,8 +278,8 @@
                 <img
                   class="team-list__img"
                   srcset="
-                    ../images/team/team_card2.jpg    1x,
-                    ../images/team/team_card2@2x.jpg 2x
+                    ./images/team/team_card2.jpg    1x,
+                    ./images/team/team_card2@2x.jpg 2x
                   "
                   src="./images/team/team_card2.jpg"
                   alt="Фото сотрудника"
@@ -362,8 +353,8 @@
                 <img
                   class="team-list__img"
                   srcset="
-                    ../images/team/team_card3.jpg    1x,
-                    ../images/team/team_card3@2x.jpg 2x
+                    ./images/team/team_card3.jpg    1x,
+                    ./images/team/team_card3@2x.jpg 2x
                   "
                   src="./images/team/team_card3.jpg"
                   alt="Фото сотрудника"
@@ -437,8 +428,8 @@
                 <img
                   class="team-list__img"
                   srcset="
-                    ../images/team/team_card4.jpg    1x,
-                    ../images/team/team_card4@2x.jpg 2x
+                    ./images/team/team_card4.jpg    1x,
+                    ./images/team/team_card4@2x.jpg 2x
                   "
                   src="./images/team/team_card4.jpg"
                   alt="Фото сотрудника"
