--- a/portfolio.html
+++ b/portfolio.html
@@ -239,10 +239,10 @@
                       <img
                         class="cards-thumb__img"
                         srcset="
-                          ../images/apps_img/img4.jpg    1x,
-                          ../images/apps_img/img4@2x.jpg 2x
+                          ./images/apps_img/img4.jpg    1x,
+                          ./images/apps_img/img4@2x.jpg 2x
                         "
-                        src="../images/apps_img/img4.jpg"
+                        src="./images/apps_img/img4.jpg"
                         alt="две коробки"
                         width="370"
                         height="294"
@@ -271,10 +271,10 @@
                       <img
                         class="cards-thumb__img"
                         srcset="
-                          ../images/apps_img/img5.jpg    1x,
-                          ../images/apps_img/img5@2x.jpg 2x
+                          ./images/apps_img/img5.jpg    1x,
+                          ./images/apps_img/img5@2x.jpg 2x
                         "
-                        src="../images/apps_img/img5.jpg"
+                        src="./images/apps_img/img5.jpg"
                         alt="монитор"
                         width="370"
                         height="294"
@@ -305,10 +305,10 @@
                       <img
                         class="cards-thumb__img"
                         srcset="
-                          ../images/apps_img/img6.jpg    1x,
-                          ../images/apps_img/img6@2x.jpg 2x
+                          ./images/apps_img/img6.jpg    1x,
+                          ./images/apps_img/img6@2x.jpg 2x
                         "
-                        src="../images/apps_img/img6.jpg"
+                        src="./images/apps_img/img6.jpg"
                         alt="журнал"
                         width="370"
                         height="294"
@@ -339,10 +339,10 @@
                       <img
                         class="cards-thumb__img"
                         srcset="
-                          ../images/apps_img/img7.jpg    1x,
-                          ../images/apps_img/img7@2x.jpg 2x
+                          ./images/apps_img/img7.jpg    1x,
+                          ./images/apps_img/img7@2x.jpg 2x
                         "
-                        src="../images/apps_img/img7.jpg"
+                        src="./images/apps_img/img7.jpg"
                         alt="тикет"
                         width="370"
                         height="294"
@@ -371,10 +371,10 @@
                       <img
                         class="cards-thumb__img"
                         srcset="
-                          ../images/apps_img/img8.jpg    1x,
-                          ../images/apps_img/img8@2x.jpg 2x
+                          ./images/apps_img/img8.jpg    1x,
+                          ./images/apps_img/img8@2x.jpg 2x
                         "
-                        src="../images/apps_img/img8.jpg"
+                        src="./images/apps_img/img8.jpg"
                         alt="работа с ноутбуком"
                         width="370"
                         height="294"
