--- a/index.html
+++ b/index.html
@@ -651,6 +651,8 @@
       </div>
     </footer>
 
+    <div></div>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__btn" data-modal-close>
