deleted span from logo

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,7 @@
       <div class="container header__container">
         <nav class="nav-menu">
           <a href="./index.html" class="logo"
-            ><span class="logo__blue">Web</span
-            ><span class="logo__black">Studio</span></a
+            >Web<span class="logo__black">Studio</span></a
           >
           <ul class="header-nav">
             <li class="header-nav__item">
@@ -405,8 +404,7 @@
       <div class="container footer-container__centered">
         <div class="footer-address">
           <a href="./index.html" class="logo"
-            ><span class="logo__blue">Web</span
-            ><span class="logo__black logo__black--white">Studio</span></a
+            >Web<span class="logo__black logo__black--white">Studio</span></a
           >
           <address class="address">
             <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
