--- a/index.html
+++ b/index.html
@@ -763,37 +763,39 @@
         </ul>
       </nav>
 
-      <ul class="mobile-contact-link">
-        <li class="mobile-contact-link__item">
-          <a class="mobile-contact-link__link" href="tel:+380961111111">
-            +38 096 111 11 11
-          </a>
-        </li>
+      <div class="mobile-contact">
+        <ul class="mobile-contact-link">
+          <li class="mobile-contact-link__item">
+            <a class="mobile-contact-link__link" href="tel:+380961111111">
+              +38 096 111 11 11
+            </a>
+          </li>
 
-        <li class="mobile-contact-link__item">
-          <a
-            class="mobile-contact-link__link mobile-contact-link__link--color"
-            href="mailto:info@devstudio.com"
-          >
-            info@devstudio.com
-          </a>
-        </li>
-      </ul>
+          <li class="mobile-contact-link__item">
+            <a
+              class="mobile-contact-link__link mobile-contact-link__link--color"
+              href="mailto:info@devstudio.com"
+            >
+              info@devstudio.com
+            </a>
+          </li>
+        </ul>
 
-      <ul class="mobile-social-network">
-        <li class="mobile-social-network__item">
-          <a class="mobile-social-network__link" href="#">Instagram</a>
-        </li>
-        <li class="mobile-social-network__item">
-          <a class="mobile-social-network__link" href="#">Twitter</a>
-        </li>
-        <li class="mobile-social-network__item">
-          <a class="mobile-social-network__link" href="#">Facebook</a>
-        </li>
-        <li class="mobile-social-network__item">
-          <a class="mobile-social-network__link" href="#">LinkedIn</a>
-        </li>
-      </ul>
+        <ul class="mobile-social-network">
+          <li class="mobile-social-network__item">
+            <a class="mobile-social-network__link" href="#">Instagram</a>
+          </li>
+          <li class="mobile-social-network__item">
+            <a class="mobile-social-network__link" href="#">Twitter</a>
+          </li>
+          <li class="mobile-social-network__item">
+            <a class="mobile-social-network__link" href="#">Facebook</a>
+          </li>
+          <li class="mobile-social-network__item">
+            <a class="mobile-social-network__link" href="#">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
     </div>
     <script
       defer
