--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
         <ul class="contact-link">
           <li class="contact-link__item">
-            <a class="contact-link__link" href="mailto:info@devstudio.com">
+            <a
+              class="contact-link__link contact-link__link--padding-top"
+              href="mailto:info@devstudio.com"
+            >
               <svg class="contact-link__icon" width="16px" height="12px">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
@@ -48,7 +51,10 @@
           </li>
 
           <li class="contact-link__item">
-            <a class="contact-link__link" href="tel:+380961111111">
+            <a
+              class="contact-link__link contact-link__link--padding-bottom"
+              href="tel:+380961111111"
+            >
               <svg class="contact-link__icon" width="10px" height="16px">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
